--- a/app/components/Hero.module.css
+++ b/app/components/Hero.module.css
@@ -106,7 +106,6 @@
   height: 100%;
   background-size: cover;
   background-position: center;
-  filter: blur(1px);
 }
 
 .blurLeft {
